# agros_gui

./: CMakeLists.txt  LICENSE  README.md  package.xml
angular/: angular.json  gulpfile.js  package-lock.json  package.json
angular/src/: index.html  styles.scss
angular/src/app/: app-routing.module.ts  app.component.html  app.component.ts  app.module.ts
angular/src/app/components/camera/: camera.component.html  camera.component.scss  camera.component.ts
angular/src/app/components/dash/: dash.component.html  dash.component.scss  dash.component.ts
angular/src/app/components/depth/: depth.component.html  depth.component.scss  depth.component.ts
angular/src/app/components/map/: map.component.html  map.component.scss  map.component.ts
angular/src/app/components/nav/: nav.component.html  nav.component.scss  nav.component.ts
angular/src/app/components/settings/: settings.component.html
angular/src/app/components/status/: status.component.html  status.component.scss  status.component.ts
angular/src/app/components/v-light-bar/: v-light-bar.component.html  v-light-bar.component.scss  v-light-bar.component.ts
angular/src/app/components/waypoints/: waypoints.component.html  waypoints.component.ts
angular/src/app/services/: ros.service.ts
angular/src/assets/: brandmark.xcf  brandmark_name.xcf  tractor_marker.xcf
angular/src/environments/: environment.prod.ts  environment.ts
angular/src/scss/: _reboot.scss  _variables.scss
launch/: gui.launch
