<?xml version="1.0"?>
<package format="2">
  <name>agros-gui</name>
  <version>0.0.0</version>
  <description>The AgROS GUI package</description>

  <maintainer email="jeremy@todo.com">Jeremy (MrCerealKiller)</maintainer>
  <author email="jeremy@todo.com">Jeremy (MrCerealKiller)</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>

  <!--   <test_depend>gtest</test_depend> -->
  <!--   <doc_depend>doxygen</doc_depend> -->
</package>
